testsuite/vhdl/syntax/test_data/label_mismatch/000_architecture.expected
label_mismatch/000_architecture:7:1: syntax error: Label mismatch in Architecture Body
architecture BENCH of testbench is
             ~~~~~ <<-- here
...
end architecture TEST_BENCH; -- BENCH vs. TEST_BENCH
                 ~~~~~~~~~~ <<-- and here
